<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"

        android:text="@string/help_text" />

    <RelativeLayout
        android:background="@drawable/result_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_result"
        android:layout_marginBottom="@dimen/margin_result"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <ImageButton
            android:id="@+id/button_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_copy_black_24dp"
            android:padding="@dimen/copy_button_padding"
            android:layout_alignParentRight="true"
            />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
            android:textAppearance="@style/ResultTextAppearance"
            android:ellipsize="end"
            android:singleLine="true"
            android:maxLines="1"
            android:gravity="center_vertical"

            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/button_copy"
            android:layout_alignTop="@id/button_copy"
            android:layout_alignBottom="@id/button_copy"

            tools:text="@string/text_hint"
            />



    </RelativeLayout>




    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_result"
        android:layout_marginBottom="@dimen/margin_result"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <ImageView
            android:id="@+id/quality"
            android:layout_width="@dimen/indicator_width"
            android:layout_height="@dimen/indicator_height"
            android:src="@drawable/quality_indicator"
            android:layout_alignParentRight="true"
            />
    <TextView
        android:id="@+id/quality_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_alignTop="@+id/quality"
        android:layout_alignParentLeft="true"
        android:gravity="center_vertical"

        android:text="@string/quality_hint"
        />
    </RelativeLayout>

    <EditText
        android:id="@+id/source_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance"
        tools:text="@string/text_hint_ru"
        />
    <CheckBox
        android:id="@+id/check_uppercase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_uppercase"
        android:textAppearance="@android:style/TextAppearance.Medium" />
    <CheckBox
        android:id="@+id/check_digits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_digits"
        android:textAppearance="@android:style/TextAppearance.Medium" />
    <CheckBox
        android:id="@+id/check_char"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_char"
        android:textAppearance="@android:style/TextAppearance.Medium" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/help_text_gen"
        android:layout_marginTop="@dimen/activity_padding"
        android:layout_marginBottom="@dimen/activity_padding"

        />

    <SeekBar
        android:id="@+id/seek_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_padding"
        android:layout_marginBottom="@dimen/activity_padding"
        android:max="10"
        />
    <TextView
        android:id="@+id/length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/length_hint"
        android:textAppearance="@android:style/TextAppearance" />

    <RelativeLayout
        android:background="@drawable/result_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_result"
        android:layout_marginBottom="@dimen/margin_result"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >


        <ImageButton
            android:id="@+id/button_copy_gen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_copy_black_24dp"
            android:padding="@dimen/copy_button_padding"
            android:layout_alignParentRight="true"
            />
        <TextView
            android:id="@+id/result_text_gen"
            android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
            android:textAppearance="@style/ResultTextAppearance"
            android:ellipsize="end"
            android:singleLine="true"
            android:maxLines="1"
            android:gravity="center_vertical"

            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/button_copy_gen"
            android:layout_alignTop="@id/button_copy_gen"
            android:layout_alignBottom="@id/button_copy_gen"
            tools:text="@string/text_hint"
            />
    </RelativeLayout>
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_marginTop="@dimen/activity_padding"
            android:outlineProvider="none"
            android:textColor="@color/button_text"
            android:text="@string/button_text"
            android:textAppearance="@android:style/TextAppearance.Medium" />
</LinearLayout>
</ScrollView>